src/widgets/ui/team/styles.scss
@use '$shared/ui/typography' as typo;
@use '$shared/ui/breakpoints' as breakpoints;

.team-container {
	box-sizing: border-box;
	width: 100svi;
	height: fit-content;
	position: relative;
	overflow: hidden;
}

.main-container {
	box-sizing: border-box;
	z-index: 1;
	width: 1200px;
	height: 1722px;
	margin-left: auto;
	margin-right: auto;
	position: relative;
	padding: 100px 0;

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		width: 1024px;
		height: 1436px;
		padding: 80px 24px;
	}

	@include breakpoints.respond-until(breakpoints.$tablet) {
		width: 100%;
		height: 1812px;
		padding: 80px 24px;
	}

	@include breakpoints.respond-until(breakpoints.$phone) {
		width: 100%;
		height: 715px;
		padding: 56px 20px;
	}
}

.text {
	transition: all 0.2s ease;
	margin-left: auto;
	margin-right: auto;
	text-align: center;

	@include typo.typography('H2');
	position: relative;
	width: fit-content;

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		@include typo.typography('Tablet/H2');
	}

	@include breakpoints.respond-until(breakpoints.$tablet) {
		@include typo.typography('Tablet/H2');
	}

	@include breakpoints.respond-until(breakpoints.$phone) {
		@include typo.typography('Mobile/H2');
	}
}

.text-accent {
	@include typo.typography('Accent');

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		@include typo.typography('Tablet/Accent');
	}

	@include breakpoints.respond-until(breakpoints.$tablet) {
		@include typo.typography('Tablet/Accent');
	}

	@include breakpoints.respond-until(breakpoints.$phone) {
		@include typo.typography('Mobile/Accent');
	}
}

.text-paragraph {
	@include typo.typography('Paragraph');

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		@include typo.typography('Text');
	}

	@include breakpoints.respond-until(breakpoints.$tablet) {
		@include typo.typography('Text');
	}

	@include breakpoints.respond-until(breakpoints.$phone) {
		@include typo.typography('Mobile/Text');
	}
}

.cells-box {
	margin-top: 64px;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(3, 1fr);
	width: 1200px;
	gap: 20px;

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		width: 100%;
	}

	@include breakpoints.respond-until(breakpoints.$tablet) {
		grid-template-columns: 1fr 1fr;
		grid-template-rows: repeat(4, auto);
		gap: 16px;
	}

	@include breakpoints.respond-until(breakpoints.$phone) {
		display: flex;
		flex-direction: column;
		gap: 16px;
		margin-top: 16px;
	}
}

:global(.cells-box-item) {
	flex-shrink: 0;
}

.cells-box-intro {
  text-align: center;
	box-sizing: border-box;
	padding: 7px 0;
	display: flex;
	flex-direction: column;
	gap: 4px;
	justify-content: center;
	align-items: center;

	@include breakpoints.respond-until(breakpoints.$phone) {
		width: 335px;
		height: 155px;
    align-self: center;
	}
}

/* Горизонтальный скролл только на мобильных */
.cells-box-cards-scroll {
	display: flex;
	flex-direction: row;
	overflow-x: auto;
  overflow-y: visible;
	gap: 12px;
	-webkit-overflow-scrolling: touch; /* плавность на iOS */
}

/* Скрываем скроллбар */
.cells-box-cards-scroll::-webkit-scrollbar {
	display: none;
}
.cells-box-cards-scroll {
	-ms-overflow-style: none;
	scrollbar-width: none;
}

.cells-box-img {
	position: absolute;
	top: 0;
	right: 0;
	display: none;

	@include breakpoints.respond-until(breakpoints.$desktopS) {
		display: block;
	}
}
.cells-box-img-big {
	position: absolute;
	top: 0;
	right: 0;
	display: none;

	@media (min-width: 1240px) {
		display: block;
	}
}

